--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -31,6 +31,12 @@
                         <small class="text-danger" *ngIf="signUpForm.get('email')?.hasError('required')">
                             This field is required.
                         </small>
+                        <small class="text-danger" *ngIf="signUpForm.get('email')?.hasError('pattern')">
+                            Enter a valid email.
+                        </small>
+                        <small class="text-danger" *ngIf="signUpForm.get('email')?.hasError('invalidEmailDomain')">
+                            Enter a valid email domain.
+                        </small>
                     </ng-container>
                 </div>
                 <div class="form-group">
