--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -49,7 +49,7 @@
                         </small>
                         <small class="text-danger" *ngIf="signUpForm.get('password')?.hasError('invalidPassword')">
                             Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase
-                            letter and 1 number
+                            letter
                         </small>
                     </ng-container>
                     <ng-template #passwordContains>
