--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-sign-up-form></app-sign-up-form>
+<div class="container-fluid p-5 h-100-vh background-black-color">
+    <app-sign-up-form></app-sign-up-form>
+</div>
