--- a/src/app/sign-up-form/sign-up-form.component.css
+++ b/src/app/sign-up-form/sign-up-form.component.css
@@ -1,5 +1,7 @@
 .background-image-signUp {
     background-image: url('https://images.pexels.com/photos/1797428/pexels-photo-1797428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .btn-primary {
