--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,6 @@ body {
     background-color: black;
 }
 
-.background-cadetblue-color {
-    background-color: cadetblue;
+.background-white-color {
+    background-color: white;
 }
